# aws-iam-expansion

./: Cargo.toml  LICENSE  README.md
src/: command.rs  lib.rs  main.rs  types.rs  utils.rs
